Renaming sa4-syntax to lottovip289 เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ✔️ ❤️ ♕

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sa4-syntax",
+  "name": "lottovip289 เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ✔️ ❤️ ♕",
   "theme": "syntax",
   "version": "0.2.0",
   "description": "lottovip289✔️ ❤️ ♕ เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ตลอด 24 ชั่วโมง",
